// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Tests API to CSS should fetch from API and generate pure CSS output 1`] = `
[
  {
    "contents": ":root {
  --cy_tailwind-cyan-50: #ecfeff; 
  --id_tailwind-indigo-500-a-50: rgba(99, 102, 241, 0.5); 
  --color-1e2932: #1e2932; 
  
  /* Add your own fallback fonts here: */
  --font-family-source-sans-3: "Source Sans 3", sans-serif; 
  --font-family-stalemate: "Stalemate", sans-serif; 
}

.text-ssp_source-sans-3-14-regular {
  font-family: var(--font-family-source-sans-3); 
  font-size: 0.875rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-ssp_source-sans-3-bolditalic {
  font-family: var(--font-family-source-sans-3); 
  font-size: 1.125rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-ssp_source-sans-3-200 {
  font-family: var(--font-family-source-sans-3); 
  font-size: 0.625rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-st_stalemate-regular {
  font-family: var(--font-family-stalemate); 
  font-size: 0.625rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: capitalize; 
}

.text-st_stalemate-regular-24-line-spacing {
  font-family: var(--font-family-stalemate); 
  font-size: 1.5rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-st_stalemate-regular-all-caps-24 {
  font-family: var(--font-family-stalemate); 
  font-size: 2.6875rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 3; 
  letter-spacing: 0.0558em; 
  text-transform: uppercase; 
}

.text-no-group {
  font-family: var(--font-family-source-sans-3); 
  font-size: 0.875rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}",
    "path": "test/output.css",
  },
]
`;

exports[`Integration Tests API to Tailwind should fetch from API and generate complete tailwind output 1`] = `
{
  "config": "module.exports = {
  theme: {
    extend: {
      colors: {
"cy_tailwind-cyan-50": "#ecfeff",
"id_tailwind-indigo-500-a-50": "rgba(99, 102, 241, 0.5)",
"color-1e2932": "#1e2932"
      },
      fontFamily: {
"source-sans-3": ["Source Sans 3", "sans-serif"],
"stalemate": ["Stalemate", "sans-serif"]
      }
    }
  }
};",
  "css": "@tailwind base;
@tailwind components;
@tailwind utilities;

.text-ssp_source-sans-3-14-regular {
  @apply text-[0.875rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}

.text-ssp_source-sans-3-bolditalic {
  @apply text-[1.125rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}

.text-ssp_source-sans-3-200 {
  @apply text-[0.625rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}

.text-st_stalemate-regular {
  @apply text-[0.625rem] leading-[1.2] font-normal tracking-[0em] font-stalemate capitalize;
}

.text-st_stalemate-regular-24-line-spacing {
  @apply text-[1.5rem] leading-[1.2] font-normal tracking-[0em] font-stalemate;
}

.text-st_stalemate-regular-all-caps-24 {
  @apply text-[2.6875rem] leading-[3] font-normal tracking-[0.0558em] font-stalemate uppercase;
}

.text-no-group {
  @apply text-[0.875rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}",
  "metadata": {
    "colorCount": 3,
    "fileId": "4ad2a2f5-64b0-80be-8006-4a0c775086b1",
    "typographyCount": 7,
  },
}
`;

exports[`Integration Tests File to CSS should parse penpot file and generate pure CSS output 1`] = `
[
  {
    "contents": ":root {
  --cy_tailwind-cyan-50: #ecfeff; 
  --id_tailwind-indigo-500-a-50: rgba(99, 102, 241, 0.5); 
  --color-1e2932: #1e2932; 
  
  /* Add your own fallback fonts here: */
  --font-family-source-sans-3: "Source Sans 3", sans-serif; 
  --font-family-stalemate: "Stalemate", sans-serif; 
}

.text-ssp_source-sans-3-14-regular {
  font-family: var(--font-family-source-sans-3); 
  font-size: 0.875rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-ssp_source-sans-3-bolditalic {
  font-family: var(--font-family-source-sans-3); 
  font-size: 1.125rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-ssp_source-sans-3-200 {
  font-family: var(--font-family-source-sans-3); 
  font-size: 0.625rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-st_stalemate-regular {
  font-family: var(--font-family-stalemate); 
  font-size: 0.625rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: capitalize; 
}

.text-st_stalemate-regular-24-line-spacing {
  font-family: var(--font-family-stalemate); 
  font-size: 1.5rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}

.text-st_stalemate-regular-all-caps-24 {
  font-family: var(--font-family-stalemate); 
  font-size: 2.6875rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 3; 
  letter-spacing: 0.0558em; 
  text-transform: uppercase; 
}

.text-no-group {
  font-family: var(--font-family-source-sans-3); 
  font-size: 0.875rem; 
  font-style: normal; 
  font-weight: 400; 
  line-height: 1.2; 
  letter-spacing: 0em; 
  text-transform: none; 
}",
    "path": "test/output.css",
  },
]
`;

exports[`Integration Tests File to Tailwind should parse penpot file and generate complete tailwind output 1`] = `
{
  "config": "module.exports = {
  theme: {
    extend: {
      colors: {
"cy_tailwind-cyan-50": "#ecfeff",
"id_tailwind-indigo-500-a-50": "rgba(99, 102, 241, 0.5)",
"color-1e2932": "#1e2932"
      },
      fontFamily: {
"source-sans-3": ["Source Sans 3", "sans-serif"],
"stalemate": ["Stalemate", "sans-serif"]
      }
    }
  }
};",
  "css": "@tailwind base;
@tailwind components;
@tailwind utilities;

.text-ssp_source-sans-3-14-regular {
  @apply text-[0.875rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}

.text-ssp_source-sans-3-bolditalic {
  @apply text-[1.125rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}

.text-ssp_source-sans-3-200 {
  @apply text-[0.625rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}

.text-st_stalemate-regular {
  @apply text-[0.625rem] leading-[1.2] font-normal tracking-[0em] font-stalemate capitalize;
}

.text-st_stalemate-regular-24-line-spacing {
  @apply text-[1.5rem] leading-[1.2] font-normal tracking-[0em] font-stalemate;
}

.text-st_stalemate-regular-all-caps-24 {
  @apply text-[2.6875rem] leading-[3] font-normal tracking-[0.0558em] font-stalemate uppercase;
}

.text-no-group {
  @apply text-[0.875rem] leading-[1.2] font-normal tracking-[0em] font-source-sans-3;
}",
  "metadata": {
    "colorCount": 3,
    "typographyCount": 7,
  },
}
`;
